--- a/day 31/package.json
+++ b/day 31/package.json
@@ -1,17 +1,14 @@
 {
-  "name": "exa",
+  "name": "day-31",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "exD.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "basic-auth": "^2.0.1",
-    "express": "^4.17.1",
-    "express-basic-auth": "^1.2.0",
-    "express-handlebars": "^4.0.4"
+    "pg": "^8.2.1"
   }
 }
