--- a/week2_assignment/package.json
+++ b/week2_assignment/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "express": "^4.17.1",
+    "express-basic-auth": "^1.2.0",
     "express-handlebars": "^4.0.4"
   }
 }
