--- a/day33/myApp/package.json
+++ b/day33/myApp/package.json
@@ -9,8 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "devnote": "^0.1.2",
-    "dotenv": "^8.2.0",
+    "csv-reader": "^1.0.6",
+    "fs": "0.0.1-security",
     "knex": "^0.21.1"
   }
 }
