--- a/day34/package.json
+++ b/day34/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "day33",
+  "name": "day34",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "exA.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "csv-reader": "^1.0.6",
     "knex": "^0.21.1",
     "pg": "^8.2.1"
   }
