--- a/day38/package.json
+++ b/day38/package.json
@@ -10,6 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^4.0.1",
+    "express": "^4.17.1",
+    "express-handlebars": "^4.0.4",
+    "express-session": "^1.17.1",
     "knex": "^0.21.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
